welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: illegal start of simple pattern
  var new T1=Array[Int](num);
      ^golomb:3: error: '=' expected but ';' found.
  var new T1=Array[Int](num);
                            ^golomb:4: error: illegal start of simple pattern
  var new T2=Array[Int](num);
      ^golomb:4: error: '=' expected but ';' found.
  var new T2=Array[Int](num);
                            ^